--- a/component.html
+++ b/component.html
@@ -14,7 +14,7 @@
       if(window.location.hostname=='localhost') {
         document.write('<link rel="stylesheet" href="../semantic-ui-bootstrap/css/smt-bootstrap.css">');
       } else {
-        document.write('<link rel="stylesheet" href="https://raw.githubusercontent.com/cblweb/semantic-ui-bootstrap/master/css/smt-bootstrap.css">');
+        document.write('<link rel="stylesheet" href="css/smt-bootstrap.css">');
       }
     </script>
   </head>
