--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>{{lang.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:title" content="SMTB - Semantic UI Bootstrap" />
+    <meta property="og:type" content="site" />
+    <meta property="og:url" content="http://smtb.cbl-web.com/"/>
+    <meta property="og:image" content="http://smtb.cbl-web.com/images/preview.jpg" />
+    <meta property="og:site_name" content="SMTB - Semantic UI Bootstrap" />
+    <meta property="og:description" content="SMTB is a Bootstrap theme and component collections inspired by Semantic UI." />
     <link href="//fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
