add "new" badge

--- a/component.html
+++ b/component.html
@@ -77,7 +77,7 @@
                             </ul>
                         </li>
                         <li><a href="#card">{{lang.Card}}</a></li>
-                        <li><a href="#Checkbox">{{lang.Checkbox}}</a>
+                        <li><a href="#Checkbox">{{lang.Checkbox}} <span class="badge">New</span></a>
                             <ul class="nav">
                                 <li><a href="#radio">Radio</a></li>
                                 <li><a href="#checkbox">Checkbox</a></li>
