bug fix for using reveal-dim with label-ribbon in .card

--- a/component.html
+++ b/component.html
@@ -1046,7 +1046,14 @@
                                 <div class="card">
                                     <div class="card-image">
                                         <span class="label label-danger label-ribbon-left">Great</span>
-                                        <img src="images/avatar/big/matthew.png">
+                                        <div class="reveal-dim">
+                                            <div class="reveal-hide reveal-content">
+                                                <div class="reveal-center">
+                                                    <span><a class="btn btn-info">View Detail</a></span>
+                                                </div>
+                                            </div>
+                                            <img src="images/avatar/big/matthew.png">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1065,7 +1072,14 @@
 <code class="language-html" data-lang="html">&lt;div class="card">
     &lt;div class="card-image">
         &lt;span class="label label-danger label-ribbon-left">Great&lt;/span>
-        &lt;img src="images/avatar/big/matthew.png">
+        &lt;div class="reveal-dim">
+            &lt;div class="reveal-hide reveal-content">
+                &lt;div class="reveal-center">
+                    &lt;span>&lt;a class="btn btn-info">View Detail&lt;/a>&lt;/span>
+                &lt;/div>
+            &lt;/div>
+            &lt;img src="images/avatar/big/matthew.png">
+        &lt;/div>
     &lt;/div>
 &lt;/div>
 
