--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main class="bs-docs-masthead" id="content" role="main" tabindex="-1">
       <div class="container"> <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">SMTB</span>
         <p class="lead" ng-bind-html-unsafe="lang.subject"></p>
-        <p>Version 3.1.0<br>({{lang.versionDesc}})</p>
+        <p>Version 3.1.1<br>({{lang.versionDesc}})</p>
         <p class="lead">
-          <a href="https://github.com/cblweb/semantic-ui-bootstrap/archive/master.zip" class="btn btn-inverted-white-fill btn-danger btn-lg">{{lang.download}}</a>
+          <a onclick="ga('send','event','download','click','')" href="https://github.com/cblweb/semantic-ui-bootstrap/archive/master.zip" class="btn btn-inverted-white-fill btn-danger btn-lg">{{lang.download}}</a>
         </p>
       </div>
       <div id="footer"></div>
