Fix speed problem in sidebar push effect (sidebar move faster than sidebar-dim) Fix bug in firefox of btn-divider Add animation to checkbox and radio Add @sidebarWitdth to mixin.less

--- a/overview.html
+++ b/overview.html
@@ -1946,16 +1946,13 @@
               <div class="bs-component" style="display:inline-block; padding-right: 30px;">
 
                 <div class="btn-group btn-divided">
-                  <a href="#" class="btn btn-lg btn-primary">Great</a>
-                  <i data-text="or"></i>
-                  <a href="#" class="btn btn-lg btn-info">General</a>
-                  <i data-text="or"></i>
+                  <a href="#" class="btn btn-lg btn-primary">Great<i data-text="or"></i></a>
+                  <a href="#" class="btn btn-lg btn-info">General<i data-text="or"></i></a>
                   <a href="#" class="btn btn-lg btn-warning">Bad</a>
                 </div>
 
                 <div class="btn-group btn-divided">
-                  <a href="#" class="btn btn-success">Allow</a>
-                  <i data-text="或"></i>
+                  <a href="#" class="btn btn-success">Allow<i data-text="或"></i></a>
                   <a href="#" class="btn btn-danger">Disable</a>
                 </div>
 
