ADD animated buttons
ADD animated buttons ,
UPDATE readme , overview, less

--- a/overview.html
+++ b/overview.html
@@ -376,11 +376,29 @@
             </div>
 
             <div class="bs-component">
-              <div class="btn-group-vertical">
+              <div class="btn-group-vertical" style="margin-bottom: 15px;">
                   <a href="#" class="btn btn-default">Button</a>
                   <a href="#" class="btn btn-default">Button</a>
                   <a href="#" class="btn btn-default">Button</a>
                   <a href="#" class="btn btn-default">Button</a>
+              </div>
+            </div>
+            
+            <hr>
+            
+            <h4>Animated Button(on hover effect)</h4>
+            <div class="bs-component">
+              <div class="btn btn-default btn-animated btn-animated-horizontal">
+                <div class="visible-content">Horizontal</div>
+                <div class="hidden-content">wow!</div>
+              </div>
+              <div class="btn btn-default btn-animated btn-animated-vertical">
+                <div class="visible-content">Vertical</div>
+                <div class="hidden-content">wow!</div>
+              </div>
+              <div class="btn btn-default btn-animated btn-animated-fade">
+                <div class="visible-content">Fade</div>
+                <div class="hidden-content">wow!</div>
               </div>
             </div>
 
